src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__multidim_arrays_can_be_parsed-2.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statements
---
[
    Assignment {
        left: ReferenceExpr {
            kind: Index(
                ExpressionList {
                    expressions: [
                        LiteralInteger {
                            value: 0,
                        },
                        LiteralInteger {
                            value: 1,
                        },
                    ],
                },
            ),
            base: Some(
                ReferenceExpr {
                    kind: Member(
                        Reference {
                            name: "x",
                        },
                    ),
                    base: None,
                },
            ),
        },
        right: LiteralString {
            value: "Hello, World!",
            is_wide: false,
        },
    },
    Assignment {
        left: ReferenceExpr {
            kind: Index(
                ExpressionList {
                    expressions: [
                        ReferenceExpr {
                            kind: Member(
                                Reference {
                                    name: "y",
                                },
                            ),
                            base: None,
                        },
                        LiteralInteger {
                            value: 1,
                        },
                    ],
                },
            ),
            base: Some(
                ReferenceExpr {
                    kind: Member(
                        Reference {
                            name: "x",
                        },
                    ),
                    base: None,
                },
            ),
        },
        right: LiteralString {
            value: "",
            is_wide: false,
        },
    },
]
