src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__signed_literal_expression_test.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statement
---
BinaryExpression {
    operator: Plus,
    left: LiteralInteger {
        value: 2,
    },
    right: UnaryExpression {
        operator: Minus,
        value: ReferenceExpr {
            kind: Member(
                Reference {
                    name: "x",
                },
            ),
            base: None,
        },
    },
}
