src/parser/tests/snapshots/rusty__parser__tests__expressions_parser_tests__wide_string_can_be_parsed-2.snap
---
source: src/parser/tests/expressions_parser_tests.rs
expression: statements
---
[
    Assignment {
        left: ReferenceExpr {
            kind: Member(
                Reference {
                    name: "x",
                },
            ),
            base: None,
        },
        right: LiteralString {
            value: "Hello, World!",
            is_wide: true,
        },
    },
    Assignment {
        left: ReferenceExpr {
            kind: Member(
                Reference {
                    name: "x",
                },
            ),
            base: None,
        },
        right: LiteralString {
            value: "",
            is_wide: true,
        },
    },
]
